-
Bug
-
Resolution: Done
-
P1: Critical
-
5.1.0
-
None
When using a listview whose delegate depends on the listview count and doing two removes at the beginning of the list, qqmldelegatemodel crashes
I'm attaching a simple testcase to reproduce
Can reproduce it with the current stable branch of qtdeclarative as of 8th april
- is required for
-
QTBUG-30688 Qt 5.1 Beta 1 release tasks
-
- Closed
-
For Gerrit Dashboard: QTBUG-30555 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
53235,4 | Avoid modifying cacheCount while iterating over it | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
53608,8 | No longer apply pending changes when accessing ItemView properties | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
55801,1 | Changelog entry for ListView behavioural change | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |